--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,18 @@ dependencies:
   table_calendar: ^3.2.0
   just_audio: ^0.9.46
   share_plus: ^10.1.4
+  shared_preferences: ^2.5.3
+  url_launcher: ^6.3.1
+  permission_handler: ^10.4.0
+  flutter_native_splash: ^2.4.5
+  onesignal_flutter: ^5.1.2
+  appsflyer_sdk: ^6.16.21
+  http: ^1.2.1
+  advertising_id: ^2.0.0
+  flutter_inappwebview: ^6.1.5
+  external_app_launcher: ^4.0.3
+  app_tracking_transparency: ^2.0.6+1
+  device_info_plus: ^11.4.0
 
 dev_dependencies:
   flutter_test:
