--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -7,13 +7,22 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Crown Dream: Your Royal Dream</string>
+	<string>C'rown Lucky Rush</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+	<key>CFBundleLocalizations</key>
+	<array>
+		<string>en-GB</string>
+		<string>en-AU</string>
+		<string>da</string>
+		<string>pt-PT</string>
+		<string>es-ES</string>
+		<string>sv</string>
+	</array>
 	<key>CFBundleName</key>
 	<string>ios_fl_n_crown_casino_3343</string>
 	<key>CFBundlePackageType</key>
@@ -23,7 +32,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>ITSAppUsesNonExemptEncryption</key>
 	<false/>
 	<key>LSApplicationQueriesSchemes</key>
@@ -31,6 +40,8 @@
 		<string>fb</string>
 		<string>mailto</string>
 	</array>
+	<key>LSHasLocalizedDisplayName</key>
+	<true/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSCameraUsageDescription</key>
